--- a/RMS.App/Views/Requisitions/CreateRequestForOther.cshtml
+++ b/RMS.App/Views/Requisitions/CreateRequestForOther.cshtml
@@ -2,6 +2,7 @@
 @model RMS.App.ViewModels.RequisitonForAnotherViewModel
 
 @{
+    ViewBag.Title = "Request For Other";
     Layout = null;
 }
 <div>
