Table footer text colour changed

--- a/RMS.App/Views/Departments/Index.cshtml
+++ b/RMS.App/Views/Departments/Index.cshtml
@@ -94,7 +94,7 @@
             }
         }
         </tbody>
-        <tfoot class="bg-secondary">
+        <tfoot class="bg-secondary text-white">
             <tr>
                 <th>
                     SL
