--- a/RMS.App/Views/RequisitionStatus/Index.cshtml
+++ b/RMS.App/Views/RequisitionStatus/Index.cshtml
@@ -89,7 +89,7 @@
         }
         </tbody>
         <tfoot>
-        <tr class="bg-secondary">
+        <tr class="bg-secondary text-white">
             <th>
                 SL
             </th>
