--- a/RMS.App/Views/Requisitions/Index.cshtml
+++ b/RMS.App/Views/Requisitions/Index.cshtml
@@ -122,7 +122,7 @@
         }
         </tbody>
         <tfoot>
-            <tr class="bg-secondary">
+            <tr class="bg-secondary text-white">
                 <td>
                     SL
                 </td>
