--- a/RMS.App/Views/Vehicles/Index.cshtml
+++ b/RMS.App/Views/Vehicles/Index.cshtml
@@ -115,7 +115,7 @@
         }
         </tbody>
         <tfoot>
-        <tr class="bg-secondary">
+        <tr class="bg-secondary text-white">
             <th>
                 SL
             </th>
