--- a/RMS.App/Views/AssignRequisitions/Index.cshtml
+++ b/RMS.App/Views/AssignRequisitions/Index.cshtml
@@ -106,7 +106,7 @@
         }
         </tbody>
         <tfoot>
-            <tr class="bg-secondary">
+            <tr class="bg-secondary text-white">
                 <th>
                     SL
                 </th>
