--- a/RMS.App/Views/AssignRequisitions/Requests.cshtml
+++ b/RMS.App/Views/AssignRequisitions/Requests.cshtml
@@ -93,7 +93,7 @@
         }
         </tbody>
         <tfoot>
-            <tr class="bg-secondary">
+            <tr class="bg-secondary text-white">
                 <th>
                     SL
                 </th>
