--- a/RMS.App/Views/Designations/Index.cshtml
+++ b/RMS.App/Views/Designations/Index.cshtml
@@ -85,7 +85,7 @@
         }
         </tbody>
         <tfoot>
-        <tr class="bg-secondary">
+        <tr class="bg-secondary text-white">
             <th>
                 SL
             </th>
