--- a/RMS.App/Views/GatePass/CheckIn.cshtml
+++ b/RMS.App/Views/GatePass/CheckIn.cshtml
@@ -13,7 +13,7 @@
 
 <table id="example" class="table table-striped table-bordered table-hover" style="width: 100%">
     <thead>
-        <tr>
+        <tr class="bg-info">
             <th>
                 SL
             </th>
@@ -69,7 +69,7 @@
     }
     </tbody>
     <tfoot>
-        <tr>
+        <tr class="badge-secondary text-white">
             <th>
                 SL
             </th>
