--- a/RMS.App/Views/GatePass/Index.cshtml
+++ b/RMS.App/Views/GatePass/Index.cshtml
@@ -32,7 +32,7 @@
 <br/>
 <table id="example1" class="table table-striped table-bordered table-hover" style="width: 100%">
     <thead>
-        <tr>
+        <tr class="bg-info">
             <th>
                 SL
             </th>
@@ -94,7 +94,7 @@
     }
     </tbody>
     <tfoot>
-        <tr>
+        <tr class="badge-secondary text-white">
             <th>
                 SL
             </th>
