exception handling in controller

--- a/RMS.App/Views/GatePass/CheckIn.cshtml
+++ b/RMS.App/Views/GatePass/CheckIn.cshtml
@@ -54,7 +54,7 @@
                         @Html.DisplayFor(modelItem => item.RequisitionId)
                     </td>
                     <td class="text-right">
-                        @Html.ActionLink("Edit", "Edit", new { id = item.Id },new {@class="btn btn-primary"})
+                        @Html.ActionLink("CheckIn", "Edit", new { id = item.Id },new {@class="btn btn-primary"})
 
                     </td>
                 </tr>
