passenger Qty added in Requisition

--- a/RMS.App/Views/Requisitions/Details.cshtml
+++ b/RMS.App/Views/Requisitions/Details.cshtml
@@ -26,6 +26,9 @@
     <div class="col-md-2">@Html.DisplayNameFor(model => model.EndDateTime)</div>
     <div class="col-md-10">@Html.DisplayFor(model => model.EndDateTime)</div>
 
+    <div class="col-md-2">@Html.DisplayNameFor(model => model.PassengerQty)</div>
+    <div class="col-md-10">@Html.DisplayFor(model => model.PassengerQty)</div>
+
     <div class="col-md-2">@Html.DisplayNameFor(model => model.Description)</div>
     <div class="col-md-10">@Html.DisplayFor(model => model.Description)</div>
 
