--- a/RMS.App/Views/Requisitions/RequisitionList.cshtml
+++ b/RMS.App/Views/Requisitions/RequisitionList.cshtml
@@ -29,9 +29,9 @@
                 <th>
                     @Html.DisplayNameFor(model => model.EndDateTime)
                 </th>
-                @*<th>
-                        @Html.DisplayNameFor(model => model.Description)
-                    </th>*@
+                <th>
+                        @Html.DisplayNameFor(model => model.PassengerQty)
+                    </th>
                 <th>
                     Action
                 </th>
@@ -66,9 +66,9 @@
                             <td>
                                 @Html.DisplayFor(modelItem => item.EndDateTime)
                             </td>
-                            @*<td>
-                                    @Html.DisplayFor(modelItem => item.Description)
-                                </td>*@
+                            <td>
+                                    @Html.DisplayFor(modelItem => item.PassengerQty)
+                                </td>
                             <td>
                                 @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
                                 @Html.ActionLink("Details", "Details", new { id = item.Id }) |
@@ -106,9 +106,9 @@
                 <th>
                     @Html.DisplayNameFor(model => model.EndDateTime)
                 </th>
-                @*<th>
-                        @Html.DisplayNameFor(model => model.Description)
-                    </th>*@
+                <th>
+                        @Html.DisplayNameFor(model => model.PassengerQty)
+                    </th>
                 <th>
                     Action
                 </th>
