--- a/RMS.App/Views/AssignRequisitions/Requests.cshtml
+++ b/RMS.App/Views/AssignRequisitions/Requests.cshtml
@@ -78,7 +78,7 @@
                         <td class="text-right">
                             @Html.ActionLink("Assign Requisition", "Create", new { requisitionId = item.RequisitionId }, new { @class = "btn btn-primary btn-sm" })
                             @Html.ActionLink("View", "ViewDetails", new { id = item.RequisitionId }, new { @class = "btn btn-info btn-sm" })
-                            @Html.ActionLink("Cancel Requisition", "Cancel", new { statusId = item.Id }, new { @class = "btn btn-warning btn-sm" })
+                            @Html.ActionLink("Cancel Requisition", "Cancel", new { statusId = item.Id }, new { @class = "btn btn-outline-danger btn-sm" })
 
                         </td>
                     </tr>
