--- a/RMS.App/Views/Requisitions/Create.cshtml
+++ b/RMS.App/Views/Requisitions/Create.cshtml
@@ -31,8 +31,9 @@
             <th>SL</th>
             <th>From Place</th>
             <th>Destination Place</th>
-            <th>Start Date Time</th>
-            <th>End Date Time</th>
+            <th>Journey Date Time</th>
+            <th>Return Date Time</th>
+            <th>Passenger Qty</th>
             <th>Description</th>
             <th>Request For</th>
         </tr>
@@ -57,6 +58,7 @@
                         <td>@item.DestinationPlace</td>
                         <td>@item.StartDateTime</td>
                         <td>@item.EndDateTime</td>
+                        <td>@item.PassengerQty</td>
                         <td>@item.Description</td>
                         <td>@item.RequestFor</td>
                     </tr>
@@ -70,8 +72,9 @@
             <th>SL</th>
             <th>From Place</th>
             <th>Destination Place</th>
-            <th>Start Date Time</th>
-            <th>End Date Time</th>
+            <th>Journey Date Time</th>
+            <th>Return Date Time</th>
+            <th>Passenger Qty</th>
             <th>Description</th>
             <th>Request For</th>
         </tr>
@@ -139,6 +142,14 @@
                             <div class="col-md-3">
                                 @Html.EditorFor(model => model.EndTime, new { htmlAttributes = new { @class = "form-control timePicker" } })
                                 @Html.ValidationMessageFor(model => model.EndTime, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+
+                        <div class="form-group row">
+                            @Html.LabelFor(model => model.PassengerQty, htmlAttributes: new { @class = "control-label col-md-3" })
+                            <div class="col-md-4">
+                                @Html.EditorFor(model => model.PassengerQty, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.ValidationMessageFor(model => model.PassengerQty, "", new { @class = "text-danger" })
                             </div>
                         </div>
 
