--- a/RMS.App/Views/Requisitions/CreateRequestForOther.cshtml
+++ b/RMS.App/Views/Requisitions/CreateRequestForOther.cshtml
@@ -60,6 +60,14 @@
             </div>
 
             <div class="form-group row">
+                @Html.LabelFor(model => model.PassengerQty, htmlAttributes: new { @class = "control-label col-md-3" })
+                <div class="col-md-4">
+                    @Html.EditorFor(model => model.PassengerQty, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.PassengerQty, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="form-group row">
                 @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-3" })
                 <div class="col-md-9">
                     @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" } })
