--- a/RMS.App/Views/Requisitions/Edit.cshtml
+++ b/RMS.App/Views/Requisitions/Edit.cshtml
@@ -84,6 +84,14 @@
             </div>
 
             <div class="form-group row">
+                @Html.LabelFor(model => model.PassengerQty, htmlAttributes: new { @class = "control-label col-md-3" })
+                <div class="col-md-8">
+                    @Html.EditorFor(model => model.PassengerQty, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.PassengerQty, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="form-group row">
                 @Html.LabelFor(model => model.RequisitionNumber, htmlAttributes: new { @class = "control-label col-md-3" })
                 <div class="col-md-8">
                     @Html.EditorFor(model => model.RequisitionNumber, new { htmlAttributes = new { @class = "form-control" ,@readOnly="readonly"} })
