--- a/RMS.App/Views/Requisitions/Feedback.cshtml
+++ b/RMS.App/Views/Requisitions/Feedback.cshtml
@@ -38,9 +38,15 @@
                 </div>
             </div>
             <div class="form-group row">
-                @Html.Label("Destination Place", htmlAttributes: new {@class = "control-label col-md-3", @readOnly = "readonly"})
+                @Html.Label("Destination Place", htmlAttributes: new {@class = "control-label col-md-3"})
                 <div class="col-md-9">
                     @Html.EditorFor(model => model.Requisition.DestinationPlace, new {htmlAttributes = new {@class = "form-control", @readOnly = "readonly"}})
+                </div>
+            </div>
+            <div class="form-group row">
+                @Html.Label("Passenger Qty", htmlAttributes: new { @class = "control-label col-md-3" })
+                <div class="col-md-9">
+                    @Html.EditorFor(model => model.Requisition.PassengerQty, new { htmlAttributes = new { @class = "form-control", @readOnly = "readonly" } })
                 </div>
             </div>
         </div>
@@ -130,7 +136,7 @@
                                 <tr>
                                     <td style="width: 25%">Employee :<br/>@comment.Requisition.Employee.FullName</td>
                                     <td style="width: 65%">Comment :<br/>@comment.CommentText</td>
-                                    <td style="width: 10%">@Html.ActionLink("Reply", "Reply",new {feedbackId = @comment.Id }, new {@class = "btn btn-primary btn-sm"})</td>
+                                    <td style="width: 10%">@Html.ActionLink("Reply", "Reply",new {feedbackId = @comment.Id }, new {@class = "btn btn-outline-primary btn-sm"})</td>
 
                                 </tr>
                             }
