--- a/RMS.App/Views/Requisitions/Index.cshtml
+++ b/RMS.App/Views/Requisitions/Index.cshtml
@@ -67,6 +67,9 @@
                 <th>
                     @Html.DisplayNameFor(model => model.RequestFor)
                 </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.PassengerQty)
+                </th>
                 @*<th>
                     Action
                 </th>*@
@@ -105,10 +108,13 @@
                         <td>
                             @Html.DisplayFor(modelItem => item.RequestFor)
                         </td>
+                        <th>
+                            @Html.DisplayFor(modelItem => item.PassengerQty)
+                        </th>
                         @*<td>
                             @Html.ActionLink("Edit", "Edit", new { id = item.Id }, new { @class = "btn btn-warning btn-sm" })
                             @Html.ActionLink("Details", "Details", new { id = item.Id }, new { @class = "btn btn-primary btn-sm" })
-                            @Html.ActionLink("Delete", "Delete", new { id = item.Id }, new { @class = "btn btn-danger btn-sm" })
+                            @Html.ActionLink("Delete", "Delete", new { id = item.Id }, new { @class = "btn btn-outline-danger btn-sm" })
                         </td>*@
                     </tr>
                 }
@@ -146,6 +152,9 @@
                 </th>
                 <th>
                     @Html.DisplayNameFor(model => model.RequestFor)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model=>model.PassengerQty)
                 </th>
                 @*<th>
                     Action
