Layout nave bar view change

--- a/RMS.App/Views/AssignRequisitions/Create.cshtml
+++ b/RMS.App/Views/AssignRequisitions/Create.cshtml
@@ -71,6 +71,10 @@
                         <td>@data.DestinationPlace</td>
                     </tr>
                     <tr>
+                        <td>@Html.DisplayName("Passenger Qty : ")</td>
+                        <td>@data.PassengerQty</td>
+                    </tr>
+                    <tr>
                         <td>@Html.DisplayName("Description : ")</td>
                         <td>@data.Description</td>
                     </tr>
