--- a/RMS.App/Views/AssignRequisitions/Details.cshtml
+++ b/RMS.App/Views/AssignRequisitions/Details.cshtml
@@ -67,6 +67,10 @@
                     <td>@Html.DisplayFor(model => model.Requisition.DestinationPlace)</td>
                 </tr>
                 <tr>
+                    <td>@Html.DisplayNameFor(model => model.Requisition.PassengerQty)</td>
+                    <td>@Html.DisplayFor(model => model.Requisition.PassengerQty)</td>
+                </tr>
+                <tr>
                     <td>@Html.DisplayNameFor(model => model.Requisition.Description)</td>
                     <td>@Html.DisplayFor(model => model.Requisition.Description)</td>
                 </tr>
