--- a/RMS.App/Views/AssignRequisitions/ViewDetails.cshtml
+++ b/RMS.App/Views/AssignRequisitions/ViewDetails.cshtml
@@ -40,6 +40,10 @@
             <td>@Html.DisplayFor(model => model.DestinationPlace)</td>
         </tr>
         <tr>
+            <td>@Html.DisplayNameFor(model => model.PassengerQty)</td>
+            <td>@Html.DisplayFor(model => model.PassengerQty)</td>
+        </tr>
+        <tr>
             <td>@Html.DisplayNameFor(model => model.Description)</td>
             <td>@Html.DisplayFor(model => model.Description)</td>
         </tr>
