Resolve Address view and Overlay in view

--- a/RMS.App/Views/Employees/Delete.cshtml
+++ b/RMS.App/Views/Employees/Delete.cshtml
@@ -135,9 +135,9 @@
                                     @Html.DisplayFor(modelItem => item.AddressLine2)<br />
                                     @Html.DisplayFor(modelItem => item.PostOffice)<br />
                                     @Html.DisplayFor(modelItem => item.PostCode)<br />
-                                    @Html.DisplayFor(modelItem => item.DivisionId)<br />
-                                    @Html.DisplayFor(modelItem => item.DistrictId)<br />
-                                    @Html.DisplayFor(modelItem => item.UpazilaId)<br /><br />
+                                    @Html.DisplayFor(modelItem => item.Division.Name)<br />
+                                    @Html.DisplayFor(modelItem => item.District.Name)<br />
+                                    @Html.DisplayFor(modelItem => item.Upazila.Name)<br /><br />
                                 }
                             }
                         </div>
@@ -160,9 +160,9 @@
                                     @Html.DisplayFor(modelItem => item.AddressLine2)<br />
                                     @Html.DisplayFor(modelItem => item.PostOffice)<br />
                                     @Html.DisplayFor(modelItem => item.PostCode)<br />
-                                    @Html.DisplayFor(modelItem => item.DivisionId)<br />
-                                    @Html.DisplayFor(modelItem => item.DistrictId)<br />
-                                    @Html.DisplayFor(modelItem => item.UpazilaId)<br /><br />
+                                    @Html.DisplayFor(modelItem => item.Division.Name)<br />
+                                    @Html.DisplayFor(modelItem => item.District.Name)<br />
+                                    @Html.DisplayFor(modelItem => item.Upazila.Name)<br /><br />
                                 }
                             }
                         </div>
