--- a/RMS.App/Views/Shared/_Layout.cshtml
+++ b/RMS.App/Views/Shared/_Layout.cshtml
@@ -37,20 +37,18 @@
     <!-- End header menu -->
 
 <!-- Start service Area -->
-<section class="service-area" style="height: 100vh; overflow: auto;">
+<section class="service-area" style="height: 100vh; overflow: hidden; clear: both; height: auto; margin-bottom: 25px;">
     <div style="height: 145px;"></div>
     <div class="container">
         <div class="row d-flex justify-content-center">
-            <div class="col-md-12 bgnewcolor" style="padding: 20px 10px 20px 14px !important">
+            <div class="col-md-12 bgnewcolor" style="padding: 20px 20px;">
 
                 @RenderBody()
 
             </div>
-
         </div>
     </div>
 </section>
-    <br />
     <!-- End service Area -->
     
     <!-- start footer Area -->
