Requisition Queue Change

--- a/RMS.App/Views/Shared/_MenuBar.cshtml
+++ b/RMS.App/Views/Shared/_MenuBar.cshtml
@@ -94,8 +94,8 @@
                         </li>
 
                         <li>@Html.ActionLink("Send Requisition", "Create", "Requisitions")</li>
-                        
-                        <li class="menu-has-children">
+                        <li>@Html.ActionLink("Requisition Queue", "Queue", "RequisitionQueue")</li>
+                        @*<li class="menu-has-children">
                                 <a href="#">Requisition Queue</a>
                                 <ul>
                                     <li>@Html.ActionLink("New Requisitions", "Requests", "AssignRequisitions")</li>
@@ -103,7 +103,7 @@
                                     <li>@Html.ActionLink("Requisitions Status", "Index", "RequisitionStatus")</li>
                                     <li>@Html.ActionLink("All Requisitions", "Index", "Requisitions")</li>
                                 </ul>
-                            </li>
+                            </li>*@
                         <li class="menu-has-children">
                                 <a href="#">Gate Pass</a>
 
