--- a/RMS.App/Views/AssignRequisitions/Create.cshtml
+++ b/RMS.App/Views/AssignRequisitions/Create.cshtml
@@ -110,10 +110,10 @@
                         </div>
 
 
-                        <div class="form-group row">
+                        <div class="form-group row" hidden="hidden">
                             @Html.LabelFor(model => model.RequisitionStatusId, htmlAttributes: new {@class = "control-label col-md-3"})
                             <div class="col-md-8">
-                                @Html.DropDownList("RequisitionStatusId", null, htmlAttributes: new {@class = "form-control", @disabled = "disabled"})
+                                @Html.DropDownList("RequisitionStatusId", null, htmlAttributes: new {@class = "form-control"})
                                 @Html.ValidationMessageFor(model => model.RequisitionStatusId, "", new {@class = "text-danger"})
                             </div>
                         </div>
