Report ViewModel Added

--- a/RMS.App/Views/Requisitions/Details.cshtml
+++ b/RMS.App/Views/Requisitions/Details.cshtml
@@ -64,4 +64,5 @@
     @Html.ActionLink("Edit", "Edit", new { id = Model.Id },new {@class="btn btn-warning"}) &nbsp;
     @Html.ActionLink("Back to List", "Create", null, new {@class = "btn btn-info"}) &nbsp;
     @Html.ActionLink("Delete", "Delete", new { id = Model.Id },new {@class="btn btn-danger"})
+    @Html.ActionLink("Report", "Report","RequisitionQueue", new { id = Model.Id }, new { @class = "btn btn-danger" })
 </p>
