--- a/RMS.App/Views/Shared/_LayoutHome.cshtml
+++ b/RMS.App/Views/Shared/_LayoutHome.cshtml
@@ -58,7 +58,7 @@
 <!-- End banner Area -->
 <!-- Start service Area -->
 
-<section class="service-area" style="height: 100vh; overflow: hidden; clear: both; height: auto; margin-bottom: 25px;">
+<section class="service-area" style="height: 100vh; min-height: 100vh ; overflow: hidden; clear: both; height: auto; margin-bottom: 25px;">
     <div style="height: 50px;"></div>
     <div class="container">
 
@@ -165,7 +165,7 @@
             <p class="col-lg-8 col-sm-12 footer-text m-0">
                 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                 Copyright &copy;
-                <script>document.write(new Date().getFullYear());</script> All rights reserved | this product make by <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://facebook.com/parvez.fci" target="_blank">Team C</a>
+                <script>document.write(new Date().getFullYear());</script> All rights reserved | this product make by <i class="fa fa-heart-o" aria-hidden="true"></i> &nbsp; <a href="@Url.Action("AboutDeveloper","Home")" target="_blank"><strong>Developer</strong></a>
                 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
             </p>
             <div class="col-lg-4 col-sm-12 footer-social">
